--- a/proj.android/bin/AndroidManifest.xml
+++ b/proj.android/bin/AndroidManifest.xml
@@ -11,13 +11,18 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application android:label="@string/app_name"
-        android:icon="@drawable/icon">
+                 android:icon="@drawable/icon">
 
-        <activity android:name=".GlassCleaner"
+        <activity android:name="org.cocos2dx.javascript.Cocos2dxActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait"
                   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
                   android:configChanges="orientation">
+
+            <!-- Tell NativeActivity the name of our .so -->
+            <meta-data android:name="android.app.lib_name"
+                       android:value="cocos2djs" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -30,8 +35,10 @@
         <meta-data android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
     </application>
-    <supports-screens android:largeScreens="true"
+
+    <supports-screens android:anyDensity="true"
                       android:smallScreens="true"
-                      android:anyDensity="true"
-                      android:normalScreens="true"/>
+                      android:normalScreens="true"
+                      android:largeScreens="true"
+                      android:xlargeScreens="true"/>
 </manifest> 
