--- a/proj.android/project.properties
+++ b/proj.android/project.properties
@@ -10,4 +10,5 @@
 # Project target.
 target=android-13
 
-android.library.reference.1=../cocos2d/cocos/2d/platform/android/java
+android.library.reference.1=../../cocos2d-x/cocos/2d/platform/android/java
+android.library.reference.2=../../../adt-bundle-mac-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
