used cocos' plugin for admobs

--- a/proj.android/project.properties
+++ b/proj.android/project.properties
@@ -11,4 +11,5 @@
 target=android-13
 
 android.library.reference.1=../../cocos2d-x/cocos/2d/platform/android/java
-android.library.reference.2=../../../adt-bundle-mac-x86_64-20131030/sdk/extras/google/google_play_services/libproject/google-play-services_lib
+android.library.reference.3=../../cocos2d-x/plugin/protocols/proj.android
+android.library.reference.2=../../cocos2d-x/plugin/plugins/admob/proj.android
