--- a/proj.android/.classpath
+++ b/proj.android/.classpath
@@ -5,5 +5,8 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="plugin-x/protocols/android/libPluginProtocol.jar"/>
+	<classpathentry kind="lib" path="plugin-x/plugins/admob/android/GoogleAdMobAdsSdk.jar"/>
+	<classpathentry kind="lib" path="plugin-x/plugins/admob/android/libPluginAdmob.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
