--- a/proj.android/AndroidManifest.xml
+++ b/proj.android/AndroidManifest.xml
@@ -1,44 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.kd.GlassCleaner"
-      android:versionCode="1"
-      android:versionName="1.0">
+<?xml version='1.0' encoding='UTF-8'?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.kd.GlassCleaner" android:versionCode="1" android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="13"/>
+    <uses-sdk android:minSdkVersion="13" />
     <uses-feature android:glEsVersion="0x00020000" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <application android:label="@string/app_name"
-                 android:icon="@drawable/icon">
+    <application android:icon="@drawable/icon" android:label="@string/app_name">
 
-        <activity android:name="org.cocos2dx.javascript.Cocos2dxActivity"
-                  android:label="@string/app_name"
-                  android:screenOrientation="portrait"
-                  android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-                  android:configChanges="orientation">
+        <activity android:configChanges="orientation" android:label="@string/app_name" android:name="org.cocos2dx.javascript.Cocos2dxActivity" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
 
-            <!-- Tell NativeActivity the name of our .so -->
-            <meta-data android:name="android.app.lib_name"
-                       android:value="cocos2djs" />
+            
+            <meta-data android:name="android.app.lib_name" android:value="cocos2djs" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name="com.google.android.gms.ads.AdActivity" 
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+    <activity android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:name="com.google.ads.AdActivity" />
     </application>
 
-    <supports-screens android:anyDensity="true"
-                      android:smallScreens="true"
-                      android:normalScreens="true"
-                      android:largeScreens="true"
-                      android:xlargeScreens="true"/>
-</manifest> 
+    <supports-screens android:anyDensity="true" android:largeScreens="true" android:normalScreens="true" android:smallScreens="true" android:xlargeScreens="true" />
+</manifest>
